kubernetes/argocd/apps/workloads/taqueria-bonjour/manifests/backend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: taqueria-bonjour
  labels:
    app: taqueria-bonjour-backend
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: taqueria-bonjour-backend
  template:
    metadata:
      labels:
        app: taqueria-bonjour-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/paulkiernan/taqueria-bonjour-backend:1.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          volumeMounts:
            - name: sqlite-vol
              mountPath: /mnt/taqueria-bonjour
      volumes:
        - name: sqlite-vol
          persistentVolumeClaim:
            claimName: sqlite-pvc
